fix(swagger): id as path value in update /romantic-event
